fix: bottomNav gapping design changes.

--- a/components/Layout/BottomNav/style.scss
+++ b/components/Layout/BottomNav/style.scss
@@ -30,13 +30,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 7px 0;
+        padding: 5px 0 3px;
         text-decoration: none;
 
         > i {
           display: block;
           color: $color-light;
-          font-size: rem(30);
+          font-size: rem(24);
         }
 
         > span {
